--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities; 
 
+body {
+  background-color: hsl(23, 80%, 90%);
+}
+
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
