--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,9 +2,9 @@
 @tailwind components;
 @tailwind utilities; 
 
-body {
+/* body {
   background-color: hsl(23, 80%, 90%);
-}
+} */
 
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
